.kubernetes/general/services/http.yml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    app: http
