.kubernetes/general/services/nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx 
spec: 
  type: NodePort
  ports:
  - name: http
    port: 80 
    protocol: TCP
    targetPort: 80
  selector:
    app: http
