.kubernetes/general/services/gateway.yml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: gateway
spec:
  gatewayClassName: gke-17-regional-external-managed
  listeners:
  - name: gateway-pre-shared-certmap
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/cert-manager-certs: matthewhill
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: store-external
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
  hostnames:
  - "matthewhill.click"
  rules:
    backendRefs:
    - name: nginx
      port: 80
